// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath contains backslash path traversal 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Resource path must not contain backslashes",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath contains path traversal 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Resource path must not contain path traversal (..)",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath has a completely unrelated extension (.pdf) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Invalid file extension. Allowed extensions: .mjs",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath has an invalid extension (.js instead of .mjs) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Invalid file extension. Allowed extensions: .mjs",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath is a folder path without extension (bare UUID) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Filename must have an extension",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when builtHandlerPath is an absolute path 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Resource path must be relative, not absolute",
              "userFriendlyMessage": "Built handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when sourceHandlerPath contains path traversal 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Resource path must not contain path traversal (..)",
              "userFriendlyMessage": "Source handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when sourceHandlerPath has an invalid extension (.mjs instead of .ts/.tsx) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Invalid file extension. Allowed extensions: .ts, .tsx, .json",
              "userFriendlyMessage": "Source handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function creation via manifest sync should fail for path traversal when sourceHandlerPath is a folder path without extension 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Filename must have an extension",
              "userFriendlyMessage": "Source handler path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source handler path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
